--- a/Css/styles.css
+++ b/Css/styles.css
@@ -1,41 +1,15 @@
-/* GLOBAL */
-*,
-*::before,
-*::after {
+
+*, *::before,*::after{
+  padding: 0;
+  margin: 0;
+  text-decoration: 0;
+  list-style: none;
   box-sizing: border-box;
 }
-html {
-  font-size: 10px;
-}
-body {
-  font-size: 16px;
-}
-/* GENERAL */
-.container {
-  padding: 1rem;
-}
-.d-none {
-  display: none;
-}
-.fs-1rem {
-  font-size: 1rem;
-}
-.fs-1em {
-  font-size: 1em;
-}
-.warning {
-  color: orangered;
-}
-/* SECTION */
-/* .signup {
-  border: 1px solid blue;
-} */
-.signup fieldset {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.signup button {
-  width: 100%;
-  margin: 2rem 0;
+
+header{
+    
+  box-shadow: 0 5px 4px rgba(0, 0, 0, 0.15);
+   
+  font-family: "Fira Sans" sans-serif;
 }
